analytics-service/ingress-analytics-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: analytics-service-ing
  namespace: analytics-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /analytics(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: analytics-service-svc
              port:
                number: 8005
